Using Z1 GC by default